--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-gh-pages-quickstart",
+	"name": "backed",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "svelte-kit dev",
@@ -17,10 +17,12 @@
 		"@playwright/test": "^1.21.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
-		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "^1.0.0-next.34",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.4",
+		"d3-sankey": "^0.12.3",
+		"d3-shape": "^3.1.0",
+		"layercake": "^6.1.0",
 		"postcss": "^8.4.12",
 		"postcss-load-config": "^3.1.4",
 		"prettier": "^2.5.1",
