--- a/assets/cryptocurrencies/tokens/lily-pad.yml
+++ b/assets/cryptocurrencies/tokens/lily-pad.yml
@@ -29,12 +29,12 @@ supply:
   updated: 2022-06-11
 backing:
   assets:
-    - toad-network: 2763.5
-    - lily-pad: 3991301010.62
-    - bnb: 30.79
-    - busd: 5600
-    - pxbsc: 16924476797.09
-    - czats: 16775.84
+    toad-network: 2763.5
+    lily-pad: 3991301010.62
+    bnb: 30.79
+    busd: 5600
+    pxbsc: 16924476797.09
+    czats: 16775.84
   quote: ~
   source: https://v2.padswap.exchange/vault/
   date: 2022-06-04
