--- a/assets/cryptocurrencies/tokens/paxg.yml
+++ b/assets/cryptocurrencies/tokens/paxg.yml
@@ -26,7 +26,7 @@ supply:
   updated: 2022-04-29
 backing:
   assets:
-    - gold: 326440.611 # 1 PAXG : 1 oz Gold (0,0283495 kg Gold)
+    gold: 326440.611 # 1 PAXG : 1 oz Gold (0,0283495 kg Gold)
   quote: "Paxos Trust Company has engaged Withum, a nationally top-ranking auditing firm, to independently verify at specific points in time that the entire supply of PAX Gold tokens corresponds 1:1 with ounces of London Good Delivery gold held in vaults."
   source: https://paxos.com/attestations/
   updated: 2022-04-29
