--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.5",
 		"tailwindcss": "^3.0.23",
-		"typescript": "~4.6.2"
+		"typescript": "~4.6.2",
+		"yaml": "^2.1.1"
 	},
 	"type": "module"
 }
