Fix builds and change data structure

--- a/basics/asset-classes.yml
+++ b/basics/asset-classes.yml
@@ -7,6 +7,9 @@ cryptocurrencies:
 fiat-money:
   name: Fiat Money
   main-asset-class: financial
+real-estate:
+  name: Real-Estate
+  main-asset-class: real
 # https://en.wikipedia.org/wiki/Asset_classes
 # https://en.wikipedia.org/wiki/Real_assets
 # https://en.wikipedia.org/wiki/Financial_asset
