--- a/assets/gold.yml
+++ b/assets/gold.yml
@@ -1,9 +1,16 @@
+symbol: Gold
 name: Gold
 description: ~
+homepage: ~
+docs: ~
+source: ~
+community: []
+audits: []
 price:
   usd: 1878.49
   source: https://coinmarketcap.com/currencies/pax-gold/
   updated: 2022-06-11
+contracts: []
 supply:
   circulating: 8606846715.69
   max: ~
@@ -11,7 +18,7 @@ supply:
   source: https://www.usgs.gov/faqs/how-much-gold-has-been-found-world
   updated: 2022-04-29
 backing:
-  assets: ~
+  assets: []
   quote: ~
   source: ~
-  updated: ~
+  date: ~
