--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
 		"@sveltejs/adapter-static": "^1.0.0-next.34",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/forms": "^0.5.2",
 		"autoprefixer": "^10.4.4",
 		"d3": "^7.4.4",
 		"d3-sankey": "^0.12.3",
