Prepare data and redirect tokens

--- a/assets/lily-pad.yml
+++ b/assets/lily-pad.yml
@@ -20,7 +20,7 @@ price:
   source: https://dexscreener.com/bsc/0x2856add546e729425383173d4f65bb3e23e796a4
   updated: 2022-06-11
 contracts:
-  - "0xc0888d80ee0abf84563168b3182650c0addeb6d5": bsc # Lily Pad  TS 84,747,438,916.33
+  "0xc0888d80ee0abf84563168b3182650c0addeb6d5": bsc # Lily Pad  TS 84,747,438,916.33
 supply:
   circulating: 84747438916.33
   max: 200000000000
