--- a/assets/glmr-pad.yml
+++ b/assets/glmr-pad.yml
@@ -19,7 +19,7 @@ price:
   source: https://dexscreener.com/moonbeam/0x7c33896ce19831dc170d99330878688a5f6df614
   updated: 2022-06-11
 contracts:
-  - "0x59193512877E2EC3bB27C178A8888Cfac62FB32D": glmr # Glmr Pad   TS 42,050,576,900.08
+  "0x59193512877E2EC3bB27C178A8888Cfac62FB32D": glmr # Glmr Pad   TS 42,050,576,900.08
 supply:
   circulating: 42050576900.08
   max: 200000000000
