--- a/assets/movr-pad.yml
+++ b/assets/movr-pad.yml
@@ -19,7 +19,7 @@ price:
   source: https://dexscreener.com/moonriver/0xf635481baa52d40bdd3a5225add1064b4a113c0c
   updated: 2022-06-11
 contracts:
-  - "0x45488c50184ce2092756ba7cdf85731fd17e6f3d": movr # Movr Pad   TS 51,044,023,817.91
+  "0x45488c50184ce2092756ba7cdf85731fd17e6f3d": movr # Movr Pad   TS 51,044,023,817.91
 supply:
   circulating: 51044023817.91
   max: 200000000000
