Add asset details

--- a/assets/lily-pad.yml
+++ b/assets/lily-pad.yml
@@ -1,6 +1,6 @@
 symbol: PAD
 name: Lily Pad
-description:
+description: PAD is the native token of PADSwap. It acts as basis of many farms, is used as staking reward in PAD farms and provides a share for development funds.
 homepage: https://dapps.padswap.exchange/
 docs: https://docs.toad.network/
 source: https://github.com/ToadNetwork
