--- a/assets/toad-network.yml
+++ b/assets/toad-network.yml
@@ -1,6 +1,6 @@
 symbol: TOAD
 name: Toad Network
-description: ~
+description: TOAD is a governance token, aiming to empower the TOAD.Network community to participate in the protocol decisions.
 homepage: https://toad.network/
 docs: https://docs.toad.network/
 source: https://github.com/ToadNetwork
