Add backing calculation

--- a/assets/pxbsc.yml
+++ b/assets/pxbsc.yml
@@ -13,10 +13,10 @@ price:
 contracts: []
 supply:
   circulating: ~
-  max: ~
-  total: ~
-  source: ~
-  updated: ~
+  max: 1000000000000.00
+  total: 494075338357.00
+  source: https://www.coingecko.com/en/coins/paradox-nft
+  updated: 2022-06-26
 backing:
   assets: []
   quote: ~
