--- a/assets/czats.yml
+++ b/assets/czats.yml
@@ -1,22 +1,31 @@
 symbol: CZATS
 name: CZATS
 description: ~
-homepage: ~
-docs: ~
-source: ~
-community: []
+homepage: https://catoshi.tech/
+docs: https://catoshi.tech/wp.pdf
+source: https://github.com/link-OPC-io/Catoshi_Czats
+community:
+  - https://t.me/originalcatoshi
+  - https://t.me/catoshiannouncements
+  - https://catoshi.medium.com/
+  - https://twitter.com/OriginalCatoshi
+  - https://reddit.com/r/catoshinakamoto
 audits: []
 price:
   usd: 0.04143
   source: ~
   updated: ~
-contracts: []
+contracts:
+  "0x56747Ed2fca81B25FAe112C7a9D4465E947Aac56": bsc # Catoshi   TS 11,000,000.00
+  "0x64674D26df0Fd7cF8e9d5c8D721Bc202C6B98822": ftm # Catoshi   TS  6,000,000.00
+  "0x402FD175049e95CeF2cC9ca1FECdb6d9736e690d": ava # CATOSHI   TS  6,000,000.00
+  "0xA10989335F3ba92bd43e60fBE8D42FE739412ac4": eth # CATOSHI   TS  5,911,392.70
 supply:
-  circulating: ~
+  circulating:
   max: ~
-  total: ~
+  total: 28911392.70
   source: ~
-  updated: ~
+  updated: 2022-06-26
 backing:
   assets: []
   quote: ~
