Try building up own fill gauge via svg

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
 		"typescript": "~4.6.2",
 		"yaml": "^2.1.1"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"d3-scale": "^4.0.2"
+	}
 }
