--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
 		"d3": "^7.4.4",
 		"d3-sankey": "^0.12.3",
 		"layercake": "^6.1.0",
+		"marked": "^4.0.18",
 		"postcss": "^8.4.12",
 		"postcss-load-config": "^3.1.4",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
+		"svelte-markdown": "^0.2.3",
 		"svelte-preprocess": "^4.10.5",
 		"tailwindcss": "^3.0.23",
 		"typescript": "~4.6.2",
