Read comments from markdown files

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"autoprefixer": "^10.4.4",
 		"d3": "^7.4.4",
 		"d3-sankey": "^0.12.3",
+		"glob": "^8.0.3",
 		"layercake": "^6.1.0",
 		"marked": "^4.0.18",
 		"postcss": "^8.4.12",
