--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,7 @@
 	"files.associations": { "*.css": "tailwindcss" },
 	"editor.quickSuggestions": {
 		"strings": true
-	}
+	},
+	"css.lint.unknownAtRules": "ignore",
+	"scss.lint.unknownAtRules": "ignore"
 }
