--- a/assets/toad-network/details.yml
+++ b/assets/toad-network/details.yml
@@ -15,22 +15,8 @@ community:
   - https://giphy.com/channel/ToadNetwork
 audits:
   - https://spadetech.io/wp-content/uploads/2021/06/toad_network_audit_report.pdf
-price:
-  usd: 3.08
-  source: https://dexscreener.com/bsc/0x20a3dc9c2ac748e3684015209735b7cdd6ca6ba5
-  updated: 2022-06-11
 contracts:
   "0x463E737D8F740395ABf44f7aac2D9531D8D539E9": bsc # Toad Network  TS 200,000.00
   "0xF480f38C366dAaC4305dC484b2Ad7a496FF00CeA": glmr # Toad Network TS  27,184.69
   "0x165DBb08de0476271714952C3C1F068693bd60D7": movr # Toad Network TS   5,031.88
-supply:
-  circulating: 195000
-  max: 200000
-  total: 195000
-  source: https://bscscan.com/token/0x463e737d8f740395abf44f7aac2d9531d8d539e9
-  updated: 2022-06-11
-backing:
-  assets: []
-  quote: ~
-  source: ~
-  updated: ~
+backing-info: ~
