--- a/assets/czats/details.yml
+++ b/assets/czats/details.yml
@@ -11,23 +11,9 @@ community:
   - https://twitter.com/OriginalCatoshi
   - https://reddit.com/r/catoshinakamoto
 audits: []
-price:
-  usd: 0.04143
-  source: ~
-  updated: ~
 contracts:
   "0x56747Ed2fca81B25FAe112C7a9D4465E947Aac56": bsc # Catoshi   TS 11,000,000.00
   "0x64674D26df0Fd7cF8e9d5c8D721Bc202C6B98822": ftm # Catoshi   TS  6,000,000.00
   "0x402FD175049e95CeF2cC9ca1FECdb6d9736e690d": ava # CATOSHI   TS  6,000,000.00
   "0xA10989335F3ba92bd43e60fBE8D42FE739412ac4": eth # CATOSHI   TS  5,911,392.70
-supply:
-  circulating:
-  max: ~
-  total: 28911392.70
-  source: ~
-  updated: 2022-06-26
-backing:
-  assets: []
-  quote: ~
-  source: ~
-  date: ~
+backing-info: ~
