--- a/assets/glmr-pad/details.yml
+++ b/assets/glmr-pad/details.yml
@@ -14,20 +14,6 @@ community:
   - https://www.youtube.com/channel/UCI_vUc-HrJWtKXj-Re-hTSw
   - https://giphy.com/channel/ToadNetwork
 audits: []
-price:
-  usd: 0.000001439
-  source: https://dexscreener.com/moonbeam/0x7c33896ce19831dc170d99330878688a5f6df614
-  updated: 2022-06-11
 contracts:
   "0x59193512877E2EC3bB27C178A8888Cfac62FB32D": glmr # Glmr Pad   TS 42,050,576,900.08
-supply:
-  circulating: 42050576900.08
-  max: 200000000000
-  total: 42050576900.08
-  source: https://moonscan.io/token/0x59193512877E2EC3bB27C178A8888Cfac62FB32D
-  updated: 2022-06-11
-backing:
-  assets: []
-  quote: ~
-  source: ~
-  date: ~
+backing-info: ~
