--- a/assets/gold/details.yml
+++ b/assets/gold/details.yml
@@ -6,19 +6,5 @@ docs: ~
 source: ~
 community: []
 audits: []
-price:
-  usd: 1878.49
-  source: https://coinmarketcap.com/currencies/pax-gold/
-  updated: 2022-06-11
 contracts: []
-supply:
-  circulating: 8606846715.69
-  max: ~
-  total: 8606846715.69 # 244000 metric ton
-  source: https://www.usgs.gov/faqs/how-much-gold-has-been-found-world
-  updated: 2022-04-29
-backing:
-  assets: []
-  quote: ~
-  source: ~
-  date: ~
+backing-info: ~
