--- a/assets/lily-pad/details.yml
+++ b/assets/lily-pad/details.yml
@@ -15,26 +15,6 @@ community:
   - https://giphy.com/channel/ToadNetwork
 audits:
   - https://spadetech.io/wp-content/uploads/2021/06/toad_Padswap_audit_report.pdf
-price:
-  usd: 0.0000007536
-  source: https://dexscreener.com/bsc/0x2856add546e729425383173d4f65bb3e23e796a4
-  updated: 2022-06-11
 contracts:
   "0xc0888d80ee0abf84563168b3182650c0addeb6d5": bsc # Lily Pad  TS 84,747,438,916.33
-supply:
-  circulating: 84747438916.33
-  max: 200000000000
-  total: 84747438916.33
-  source: https://bscscan.com/token/0xc0888d80ee0abf84563168b3182650c0addeb6d5
-  updated: 2022-06-11
-backing:
-  assets:
-    toad-network: 2763.5
-    lily-pad: 3991301010.62
-    bnb: 30.79
-    busd: 5600
-    pxbsc: 16924476797.09
-    czats: 16775.84
-  quote: ~
-  source: https://v2.padswap.exchange/vault/
-  date: 2022-06-04
+backing-info: ~
