--- a/assets/movr-pad/details.yml
+++ b/assets/movr-pad/details.yml
@@ -14,20 +14,6 @@ community:
   - https://www.youtube.com/channel/UCI_vUc-HrJWtKXj-Re-hTSw
   - https://giphy.com/channel/ToadNetwork
 audits: []
-price:
-  usd: 0.0000001851
-  source: https://dexscreener.com/moonriver/0xf635481baa52d40bdd3a5225add1064b4a113c0c
-  updated: 2022-06-11
 contracts:
   "0x45488c50184ce2092756ba7cdf85731fd17e6f3d": movr # Movr Pad   TS 51,044,023,817.91
-supply:
-  circulating: 51044023817.91
-  max: 200000000000
-  total: 51044023817.91
-  source: https://moonriver.moonscan.io/token/0x45488c50184ce2092756ba7cdf85731fd17e6f3d
-  updated: 2022-06-11
-backing:
-  assets: []
-  quote: ~
-  source: ~
-  updated: ~
+backing-info: ~
