--- a/assets/paxg/details.yml
+++ b/assets/paxg/details.yml
@@ -10,23 +10,8 @@ community:
   - https://www.facebook.com/paxosglobal
   - https://www.linkedin.com/company/paxos/
 audits: []
-price:
-  usd: 1878.49
-  source: https://coinmarketcap.com/currencies/pax-gold/
-  updated: 2022-06-11
 contracts:
   "0x45804880de22913dafe09f4980848ece6ecbaf78": eth # Paxos Gold            TS 333,179.81
   "C6oFsE8nXRDThzrMEQ5SxaNFGKoyyfWDDVPw37JKvPTe": sol # Paxos Gold (Portal) TS     464.24
   "0x7950865a9140cb519342433146ed5b40c6f210f7": bsc # Binance-Peg PAX Gold  TS     300.00   CS 250
-supply:
-  circulating: 326440.611
-  max: ~
-  total: 326440.611
-  source: https://coinmarketcap.com/currencies/pax-gold/
-  updated: 2022-04-29
-backing:
-  assets:
-    gold: 326440.611 # 1 PAXG : 1 oz Gold (0,0283495 kg Gold)
-  quote: "Paxos Trust Company has engaged Withum, a nationally top-ranking auditing firm, to independently verify at specific points in time that the entire supply of PAX Gold tokens corresponds 1:1 with ounces of London Good Delivery gold held in vaults."
-  source: https://paxos.com/attestations/
-  updated: 2022-04-29
+backing-info: "Paxos Trust Company has engaged Withum, a nationally top-ranking auditing firm, to independently verify at specific points in time that the entire supply of PAX Gold tokens corresponds 1:1 with ounces of London Good Delivery gold held in vaults."
