--- a/assets/usd/details.yml
+++ b/assets/usd/details.yml
@@ -6,19 +6,5 @@ docs: ~
 source: ~
 community: []
 audits: []
-price:
-  usd: 1.0
-  source: ~
-  updated: 2022-06-11
 contracts: []
-supply:
-  circulating: 21728000000000.00
-  max: ~
-  total: 21728000000000.00 # 21,728,000,000,000.00
-  source: https://fred.stlouisfed.org/series/M2SL
-  updated: 2022-05-24
-backing:
-  assets: []
-  quote: ~
-  source: ~
-  date: ~
+backing-info: ~
