--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.5",
+		"svelte-seo": "^1.4.1",
 		"tailwindcss": "^3.0.23",
 		"typescript": "~4.6.2",
 		"yaml": "^2.1.1"
