Add more chains

--- a/basics/chains.yml
+++ b/basics/chains.yml
@@ -41,12 +41,24 @@ hoo:
 movr:
   explorer: https://moonriver.moonscan.io/token/
   name: Moonriver
+okc:
+  explorer: https://www.oklink.com/en/okc/token/
+  name: OKLink
 poly:
   explorer: https://polygonscan.com/token/
   name: Polygon
+rsk:
+  explorer: https://explorer.rsk.co/address/
+  name: RSK
 sol:
   explorer: https://solscan.io/token/
   name: Solana
+tomo:
+  explorer: https://tomoscan.io/token/
+  name: Tomo
 velas:
   explorer: https://evmexplorer.velas.com/token/
   name: Velas
+xdai:
+  explorer: https://blockscout.com/xdai/mainnet/token/
+  name: xDAI
