Add some historical data for test

--- a/assets/lily-pad/backing/2022-06-04T00:00:00.000Z.yml
+++ b/assets/lily-pad/backing/2022-06-04T00:00:00.000Z.yml
@@ -4,5 +4,5 @@ assets:
   bnb: 30.79
   busd: 5600
   pxbsc: 16924476797.09
-  czats: 16775.84
+  catoshi: 16775.84
 source: https://v2.padswap.exchange/vault/
