--- a/assets/bnb/details.yml
+++ b/assets/bnb/details.yml
@@ -18,3 +18,6 @@ contracts:
   "0xeCDCB5B88F8e3C15f95c720C51c71c9E2080525d": poly #  Wrapped BNB (Wormhole)  TS      2,700.57
   "0x442F7f22b1EE2c842bEAFf52880d4573E9201158": ava #   Wrapped BNB (Wormhole)  TS          2.59
 backing-info: ~
+tags:
+  - cryptocurrency
+  - stable
