--- a/assets/bullishjackpot/details.yml
+++ b/assets/bullishjackpot/details.yml
@@ -10,3 +10,5 @@ audits: []
 contracts:
   "0x37f3ef4e065f3415d1b6f9284389cc9d9439f658": bsc #   BJT   TS 1,000,000,000,000
 backing-info: ~
+tags:
+  - cryptocurrency
