--- a/assets/busd/details.yml
+++ b/assets/busd/details.yml
@@ -18,3 +18,6 @@ contracts:
   "6nuaX3ogrr2CaoAPjtaKHAoBNWok32BMcRozuf32s2QF": sol #   Wrapped BUSD (Allbridge from BSC) TS        543,785.58
   "0x19860CCB0A68fd4213aB9D8266F7bBf05A8dDe98": ava #     Binance USD                       TS        145,217.73
 backing-info: "Paxos Trust Company has engaged Withum, a nationally top-ranking auditing firm, to independently verify at specific points in time that the entire supply of Binance USD (BUSD) tokens is consistent with USD in reserve accounts at U.S. banks held and managed by Paxos."
+tags:
+  - cryptocurrency
+  - stable
