--- a/assets/catoshi/details.yml
+++ b/assets/catoshi/details.yml
@@ -17,3 +17,5 @@ contracts:
   "0x402FD175049e95CeF2cC9ca1FECdb6d9736e690d": ava # CATOSHI   TS  6,000,000.00
   "0xA10989335F3ba92bd43e60fBE8D42FE739412ac4": eth # CATOSHI   TS  5,911,392.70
 backing-info: ~
+tags:
+  - cryptocurrency
