--- a/assets/ethereum/details.yml
+++ b/assets/ethereum/details.yml
@@ -20,3 +20,5 @@ contracts:
   "0xf20d962a6c8f70c731bd838a3a388d7d48fa6e15": ava #   ETH   TS       455.517575
   "0x2eaa73bd0db20c64f53febea7b5f5e5bccc7fb8b": tomo #  ETH   TS       211.63
 backing-info: ~
+tags:
+  - cryptocurrency
