--- a/assets/gallant/details.yml
+++ b/assets/gallant/details.yml
@@ -21,3 +21,5 @@ audits:
 contracts:
   "0x580655e2c6d4fc125c0b2d37b2a3e56219bf9f78": bsc # Gallant   TS 100,000,000,000,000
 backing-info: ~
+tags:
+  - cryptocurrency
