--- a/assets/hoge/details.yml
+++ b/assets/hoge/details.yml
@@ -18,3 +18,5 @@ contracts:
   "0xDfF7fcF6a86F7Dc86E7facECA502851f82a349A6": xdai #  HOGE    TS     10,257,053
   "0xF31778D591c558140398F46feCA42A6a2dbFFe90": ftm #   HOGE    TS      1,715,615.104136
 backing-info: ~
+tags:
+  - cryptocurrency
