--- a/assets/lily-pad/details.yml
+++ b/assets/lily-pad/details.yml
@@ -18,3 +18,6 @@ audits:
 contracts:
   "0xc0888d80ee0abf84563168b3182650c0addeb6d5": bsc # Lily Pad  TS 84,747,438,916.33
 backing-info: ~
+tags:
+  - cryptocurrency
+  - vault
