--- a/assets/movr-pad/details.yml
+++ b/assets/movr-pad/details.yml
@@ -17,3 +17,6 @@ audits: []
 contracts:
   "0x45488c50184ce2092756ba7cdf85731fd17e6f3d": movr # Movr Pad   TS 51,044,023,817.91
 backing-info: ~
+tags:
+  - cryptocurrency
+  - vault
