--- a/assets/toad-network/details.yml
+++ b/assets/toad-network/details.yml
@@ -20,3 +20,5 @@ contracts:
   "0xF480f38C366dAaC4305dC484b2Ad7a496FF00CeA": glmr # Toad Network TS  27,184.69
   "0x165DBb08de0476271714952C3C1F068693bd60D7": movr # Toad Network TS   5,031.88
 backing-info: ~
+tags:
+  - cryptocurrency
