--- a/assets/bitcoin/details.yml
+++ b/assets/bitcoin/details.yml
@@ -11,3 +11,5 @@ audits: []
 contracts:
   "0x7130d2a12b9bcbfae4f2634d864a1ee1ce3ead9c": bsc #   BTCB   TS 112,501
 backing-info: ~
+tags:
+  - cryptocurrency
