--- a/assets/fukarens/details.yml
+++ b/assets/fukarens/details.yml
@@ -12,3 +12,5 @@ audits: []
 contracts:
   "0xa898bbb508c04be26af3d319b7775927afcb02af": bsc #   FuckYouKarens   TS 1,000,000,000,000
 backing-info: ~
+tags:
+  - cryptocurrency
