--- a/assets/glmr-pad/details.yml
+++ b/assets/glmr-pad/details.yml
@@ -17,3 +17,6 @@ audits: []
 contracts:
   "0x59193512877E2EC3bB27C178A8888Cfac62FB32D": glmr # Glmr Pad   TS 42,050,576,900.08
 backing-info: ~
+tags:
+  - cryptocurrency
+  - vault
