--- a/assets/paxg/details.yml
+++ b/assets/paxg/details.yml
@@ -15,3 +15,5 @@ contracts:
   "C6oFsE8nXRDThzrMEQ5SxaNFGKoyyfWDDVPw37JKvPTe": sol # Paxos Gold (Portal) TS     464.24
   "0x7950865a9140cb519342433146ed5b40c6f210f7": bsc # Binance-Peg PAX Gold  TS     300.00   CS 250
 backing-info: "Paxos Trust Company has engaged Withum, a nationally top-ranking auditing firm, to independently verify at specific points in time that the entire supply of PAX Gold tokens corresponds 1:1 with ounces of London Good Delivery gold held in vaults."
+tags:
+  - commodity
