--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"d3-sankey": "^0.12.3",
 		"glob": "^8.0.3",
 		"layercake": "^6.1.0",
+		"lodash": "^4.17.21",
 		"marked": "^4.0.18",
 		"postcss": "^8.4.12",
 		"postcss-load-config": "^3.1.4",
