--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
 	"name": "bcked",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync",
+		"dev": "vite dev",
+		"build": "vite build",
+		"package": "vite package",
+		"preview": "vite preview",
+		"prepare": "vite sync",
 		"check": "svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
 		"test": "playwright test",
@@ -14,34 +14,33 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.21.0",
+		"@playwright/test": "^1.25.1",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
 		"@sveltejs/adapter-static": "^1.0.0-next.34",
-		"@sveltejs/kit": "next",
-		"@tailwindcss/forms": "^0.5.2",
-		"@tailwindcss/typography": "^0.5.2",
-		"autoprefixer": "^10.4.4",
-		"d3": "^7.4.4",
+		"@sveltejs/kit": "^1.0.0-next.468",
+		"@sveltejs/vite-plugin-svelte": "^1.0.4",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.7",
+		"autoprefixer": "^10.4.8",
+		"d3": "^7.6.1",
 		"d3-sankey": "^0.12.3",
+		"d3-scale": "^4.0.2",
 		"glob": "^8.0.3",
-		"layercake": "^6.1.0",
+		"layercake": "^6.1.2",
 		"lodash": "^4.17.21",
-		"marked": "^4.0.18",
-		"postcss": "^8.4.12",
+		"marked": "^4.1.0",
+		"postcss": "^8.4.16",
 		"postcss-load-config": "^3.1.4",
-		"prettier": "^2.5.1",
-		"prettier-plugin-svelte": "^2.5.0",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.5",
+		"prettier": "^2.7.1",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.50.0",
+		"svelte-check": "^2.9.0",
+		"svelte-preprocess": "^4.10.7",
 		"svelte-seo": "^1.4.1",
-		"tailwindcss": "^3.0.23",
+		"tailwindcss": "^3.1.8",
 		"typescript": "~4.6.2",
 		"yaml": "^2.1.1"
 	},
-	"type": "module",
-	"dependencies": {
-		"d3-scale": "^4.0.2"
-	}
+	"type": "module"
 }
