--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.50.1",
 		"svelte-check": "^2.9.0",
+		"svelte-inview": "^3.0.1",
 		"svelte-preprocess": "^4.10.7",
 		"svelte-seo": "^1.4.1",
 		"tailwindcss": "^3.1.8",
