--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"glob": "^8.0.3",
 		"layercake": "^6.1.2",
 		"lodash": "^4.17.21",
+		"lodash-es": "^4.17.21",
 		"marked": "^4.1.0",
 		"postcss": "^8.4.16",
 		"postcss-load-config": "^3.1.4",
