--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/typography": "^0.5.7",
 		"autoprefixer": "^10.4.8",
 		"d3": "^7.6.1",
+		"d3-force-boundary": "^0.0.3",
 		"d3-sankey": "^0.12.3",
 		"d3-scale": "^4.0.2",
 		"glob": "^8.0.3",
