--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"svelte-preprocess": "^4.10.7",
 		"svelte-seo": "^1.4.1",
 		"tailwindcss": "^3.1.8",
+		"tailwindcss-scoped-groups": "^2.0.0",
 		"typescript": "~4.6.2",
 		"yaml": "^2.1.1"
 	},
