Test first connect button

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
 		"@sveltejs/vite-plugin-svelte": "^1.0.5",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.7",
+		"@wagmi/core": "^0.5.7",
 		"autoprefixer": "^10.4.8",
 		"d3": "^7.6.1",
 		"d3-force-boundary": "^0.0.3",
 		"d3-sankey": "^0.12.3",
 		"d3-scale": "^4.0.2",
+		"ethers": "^5.7.1",
 		"glob": "^8.0.3",
 		"layercake": "^6.1.2",
 		"lodash": "^4.17.21",
