--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.25.2",
+		"@playwright/test": "^1.29.1",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
 		"@sveltejs/adapter-static": "^1.0.0-next.34",
 		"@sveltejs/kit": "^1.0.0-next.468",
 		"@sveltejs/vite-plugin-svelte": "^1.0.5",
 		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/typography": "^0.5.7",
-		"@wagmi/core": "^0.5.7",
-		"autoprefixer": "^10.4.8",
-		"d3": "^7.6.1",
+		"@tailwindcss/typography": "^0.5.8",
+		"@wagmi/core": "^0.8.5",
+		"autoprefixer": "^10.4.13",
+		"d3": "^7.8.0",
 		"d3-force-boundary": "^0.0.3",
 		"d3-sankey": "^0.12.3",
 		"d3-scale": "^4.0.2",
-		"ethers": "^5.7.1",
+		"ethers": "^5.7.2",
 		"glob": "^8.0.3",
-		"layercake": "^6.1.2",
+		"layercake": "^7.2.0",
 		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
-		"marked": "^4.1.0",
+		"marked": "^4.2.5",
 		"postcss": "^8.4.16",
-		"postcss-load-config": "^3.1.4",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.7.0",
+		"postcss-load-config": "^4.0.1",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
 		"svelte": "^3.50.1",
 		"svelte-check": "^2.9.0",
 		"svelte-inview": "^3.0.1",
 		"svelte-preprocess": "^4.10.7",
 		"svelte-seo": "^1.4.1",
-		"tailwindcss": "^3.1.8",
+		"tailwindcss": "^3.2.4",
 		"tailwindcss-scoped-groups": "^2.0.0",
-		"typescript": "~4.6.2",
-		"yaml": "^2.1.1"
+		"typescript": "^4.9.4",
+		"yaml": "^2.2.0"
 	},
 	"type": "module"
 }
