--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
 		"@sveltejs/adapter-static": "^1.0.0-next.34",
 		"@sveltejs/kit": "^1.0.0-next.468",
-		"@sveltejs/vite-plugin-svelte": "^1.0.5",
+		"@sveltejs/vite-plugin-svelte": "1.4",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.8",
 		"@wagmi/core": "^0.8.5",
@@ -36,10 +36,10 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
-		"svelte": "^3.50.1",
-		"svelte-check": "^2.9.0",
+		"svelte": "^3.55.0",
+		"svelte-check": "^3.0.1",
 		"svelte-inview": "^3.0.1",
-		"svelte-preprocess": "^4.10.7",
+		"svelte-preprocess": "^5.0.0",
 		"svelte-seo": "^1.4.1",
 		"tailwindcss": "^3.2.4",
 		"tailwindcss-scoped-groups": "^2.0.0",
