More svelte upgrades

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"@playwright/test": "^1.29.1",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
-		"@sveltejs/adapter-static": "^1.0.0-next.34",
-		"@sveltejs/kit": "^1.0.0-next.468",
-		"@sveltejs/vite-plugin-svelte": "1.4",
+		"@sveltejs/adapter-static": "^1.0.0-next.49",
+		"@sveltejs/kit": "^1.0.0-next.578",
+		"@sveltejs/vite-plugin-svelte": "^1.4.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.8",
 		"@wagmi/core": "^0.8.5",
