Upgrade svelte kit to v1

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
 		"@playwright/test": "^1.29.1",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
-		"@sveltejs/adapter-static": "^1.0.0-next.49",
-		"@sveltejs/kit": "^1.0.0-next.578",
-		"@sveltejs/vite-plugin-svelte": "^1.4.0",
+		"@sveltejs/adapter-static": "^1.0.0",
+		"@sveltejs/kit": "^1.0.1",
+		"@sveltejs/vite-plugin-svelte": "^2.0.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.8",
 		"@wagmi/core": "^0.8.5",
@@ -28,11 +28,11 @@
 		"d3-scale": "^4.0.2",
 		"ethers": "^5.7.2",
 		"glob": "^8.0.3",
-		"layercake": "^7.2.0",
+		"layercake": "^7.2.2",
 		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
 		"marked": "^4.2.5",
-		"postcss": "^8.4.16",
+		"postcss": "^8.4.20",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
