--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
 		"@sveltejs/vite-plugin-svelte": "^2.0.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.8",
+		"@types/glob": "^8.0.0",
+		"@types/lodash": "^4.14.191",
+		"@types/marked": "^4.0.8",
 		"@wagmi/core": "^0.8.5",
 		"autoprefixer": "^10.4.13",
 		"d3": "^7.8.0",
@@ -43,6 +46,7 @@
 		"svelte-seo": "^1.4.1",
 		"tailwindcss": "^3.2.4",
 		"tailwindcss-scoped-groups": "^2.0.0",
+		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
 		"yaml": "^2.2.0"
 	},
