Further transition to TS

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
 		"tailwindcss-scoped-groups": "^2.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
+		"vite": "^4.0.3",
+		"vitest": "^0.26.2",
 		"yaml": "^2.2.0"
 	},
 	"type": "module"
