--- a/assets/lily-pad/scripts/farms_config_movr.json
+++ b/assets/lily-pad/scripts/farms_config_movr.json
@@ -1431,6 +1431,7 @@
 				"type": "function"
 			}
 		],
+		"source": "https://moonriver.moonscan.io/tokenholdings?a=0x7a06dbae8666e7dbdcf26a37be020dfedc782176",
 		"pairs": [
 			"0xfDFaB6B6A5982F627F70f392207bfA536f66327b",
 			"0x21D6DbcA8aACdAa739e40180b1C8C828B46Ae376",
