--- a/assets/usdc/supply/2019-05-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2019-05-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 293184174
 max: ~
 total: 293184174
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20190517.pdf
+source: https://www.centre.io/usdc-transparency
