--- a/assets/usdc/supply/2020-01-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2020-01-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 519628995
 max: ~
 total: 519628995
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20200116.pdf
+source: https://www.centre.io/usdc-transparency
