--- a/assets/usdc/supply/2020-11-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2020-11-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 2971030556
 max: ~
 total: 2971030556
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20201123-1.pdf
+source: https://www.centre.io/usdc-transparency
