--- a/assets/usdc/supply/2021-02-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2021-02-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 5997307895
 max: ~
 total: 5997307895
-source: https://www.centre.io/hubfs/pdfs/attestation/2021%20Circle%20Internet%20Examination%20Report%20January%202021%20FINAL.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
