--- a/assets/usdc/supply/2021-03-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2021-03-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 9429129577
 max: ~
 total: 9429129577
-source: https://www.centre.io/hubfs/pdfs/attestation/grant-thorton_circle_usdc_reserves20210429.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
