--- a/assets/usdc/supply/2021-05-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2021-05-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 14697267257
 max: ~
 total: 14697267257
-source: https://www.centre.io/hubfs/pdfs/attestation/Grant-Thorton_circle_usdc_reserves_06092021.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
