--- a/assets/usdc/supply/2021-09-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2021-09-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 27415446969
 max: ~
 total: 27415446969
-source: https://www.centre.io/hubfs/pdfs/attestation/2021%20Circle%20Examination%20Report%20August%202021%20Final.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
