--- a/assets/usdc/supply/2022-08-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2022-08-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 54488837404
 max: ~
 total: 54488837404
-source: https://www.centre.io/hubfs/USDC%202022_Circle%20Examination%20Report%20August%202022.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
