--- a/assets/usdc/supply/2022-10-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2022-10-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 47261819834
 max: ~
 total: 47261819834
-source: https://www.centre.io/hubfs/USDC%202022_Circle%20Examination%20Report%20Sept%202022-1.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
