--- a/assets/usdc/backing/2019-01-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2019-01-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 251211209
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20190116.pdf
+source: https://www.centre.io/usdc-transparency
