--- a/assets/usdc/backing/2019-10-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2019-10-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 429965320
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20191011.pdf
+source: https://www.centre.io/usdc-transparency
