--- a/assets/usdc/backing/2020-10-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2020-10-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 2515032711
-source: https://www.centre.io/hubfs/pdfs/attestation/grant-thornton_circle_usdc_reserves_20201016.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
