--- a/assets/usdc/backing/2021-01-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2021-01-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 4011270692
-source: https://f.hubspotusercontent30.net/hubfs/9304636/Dec%202020%20Circle%20Internet%20Financial%20Inc%20Examination%20Report%20FINAL.pdf
+source: https://www.centre.io/usdc-transparency
