--- a/assets/usdc/backing/2021-02-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2021-02-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 6002293927
-source: https://www.centre.io/hubfs/pdfs/attestation/2021%20Circle%20Internet%20Examination%20Report%20January%202021%20FINAL.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
