--- a/assets/usdc/backing/2021-03-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2021-03-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 9382986657
-source: https://www.centre.io/hubfs/pdfs/attestation/grant-thorton_circle_usdc_reserves20210429.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
