--- a/assets/usdc/backing/2021-04-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2021-04-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 11141404000
-source: https://www.centre.io/hubfs/pdfs/attestation/Grant-Thorton_circle_usdc_reserves_06092021.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
