--- a/assets/usdc/backing/2021-06-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2021-06-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 22176182251
-source: https://www.centre.io/hubfs/pdfs/attestation/Grant-Thorton_circle_usdc_reserves_07162021.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
