--- a/assets/usdc/backing/2022-01-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2022-01-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 42416160651
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/2021%20Circle%20Examination%20Report%20December%202021.pdf
+source: https://www.centre.io/usdc-transparency
