--- a/assets/usdc/backing/2022-02-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2022-02-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 50031478777
-source: https://www.centre.io/hubfs/PDF/2022%20Circle%20Examination%20Report%20January%202022.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
