--- a/assets/usdc/backing/2022-07-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2022-07-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 55569660586
-source: https://www.centre.io/hubfs/PDF/USDC%202022_Circle%20Examination%20Report%20June%202022.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
