--- a/assets/usdc/backing/2022-11-01T06:59:00.000Z.yml
+++ b/assets/usdc/backing/2022-11-01T06:59:00.000Z.yml
@@ -1,3 +1,3 @@
 assets:
   usd: 43754958453
-source: https://www.centre.io/hubfs/USDC%202022_Circle%20Examination%20Report%20October%202022.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
