--- a/assets/usdc/supply/2018-11-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2018-11-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 127408827
 max: ~
 total: 127408827
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20181120.pdf
+source: https://www.centre.io/usdc-transparency
