--- a/assets/usdc/supply/2018-12-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2018-12-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 177190279
 max: ~
 total: 177190279
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20181218.pdf
+source: https://www.centre.io/usdc-transparency
