--- a/assets/usdc/supply/2019-04-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2019-04-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 246586876
 max: ~
 total: 246586876
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20190417.pdf
+source: https://www.centre.io/usdc-transparency
