--- a/assets/usdc/supply/2019-07-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2019-07-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 366619335
 max: ~
 total: 366619335
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20190719.pdf
+source: https://www.centre.io/usdc-transparency
