--- a/assets/usdc/supply/2020-05-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2020-05-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 726804679
 max: ~
 total: 726804679
-source: https://f.hubspotusercontent30.net/hubfs/9304636/PDF/grant-thornton_circle_usdc_reserves_20200515%20(1).pdf
+source: https://www.centre.io/usdc-transparency
