--- a/assets/usdc/supply/2020-10-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2020-10-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 2513941166
 max: ~
 total: 2513941166
-source: https://www.centre.io/hubfs/pdfs/attestation/grant-thornton_circle_usdc_reserves_20201016.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
