--- a/assets/usdc/supply/2021-06-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2021-06-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 22176182251
 max: ~
 total: 22176182251
-source: https://www.centre.io/hubfs/pdfs/attestation/Grant-Thorton_circle_usdc_reserves_07162021.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
