--- a/assets/usdc/supply/2021-08-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2021-08-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 27312456821
 max: ~
 total: 27312456821
-source: https://www.centre.io/hubfs/pdfs/attestation/2021%20Circle%20Examination%20Report%20July%202021%20Final.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
