--- a/assets/usdc/supply/2022-03-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2022-03-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 53496850808
 max: ~
 total: 53496850808
-source: https://www.centre.io/hubfs/PDF/2022%20Circle%20Examination%20Report%20February%202022.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
