--- a/assets/usdc/supply/2022-04-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2022-04-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 51388555903
 max: ~
 total: 51388555903
-source: https://www.centre.io/hubfs/PDF/2022%20Circle%20Examination%20Report%20March%202022.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
