--- a/assets/usdc/supply/2022-05-01T06:59:00.000Z.yml
+++ b/assets/usdc/supply/2022-05-01T06:59:00.000Z.yml
@@ -1,4 +1,4 @@
 circulating: 49260105739
 max: ~
 total: 49260105739
-source: https://www.centre.io/hubfs/PDF/2022%20Circle%20Examination%20Report%20April%202022.pdf?hsLang=en
+source: https://www.centre.io/usdc-transparency
