Search text example typing animation

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"svelte-inview": "^3.0.1",
 		"svelte-preprocess": "^5.0.0",
 		"svelte-seo": "^1.4.1",
+		"svelte-typewriter": "^3.1.4",
 		"tailwindcss": "^3.2.4",
 		"tailwindcss-scoped-groups": "^2.0.0",
 		"tslib": "^2.4.1",
