Add project roadmap

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
 		"marked": "^4.2.5",
+		"octokit": "^2.0.11",
 		"postcss": "^8.4.20",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.1",
