--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"gen:previews": "playwright test ./src/compile-data/preview-screenshots.spec.ts && cp -rf ./static/previews ./build/previews"
 	},
 	"devDependencies": {
+		"@octokit/rest": "^19.0.5",
 		"@playwright/test": "^1.29.1",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@rgossiaux/svelte-heroicons": "^0.1.2",
@@ -40,7 +41,6 @@
 		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
 		"marked": "^4.2.5",
-		"octokit": "^2.0.11",
 		"postcss": "^8.4.20",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.1",
