Add deploy schedule

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+  schedule:
+    # Runs "at 22:00 every day" (see https://crontab.guru)
+    - cron: "0 22 * * *"
   workflow_dispatch:
 
 jobs:
