--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,12 @@ jobs:
           npm run gen:previews
           touch build/.nojekyll
 
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update Asset Data
+          branch: main
+          file_pattern: "assets/**/*.json"
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
