--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           commit_message: Update Asset Data
           branch: main
-          file_pattern: "assets/**/*.json"
+          file_pattern: ":/assets/**/*.json"
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.5
