--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.1",
 		"prettier-plugin-svelte": "^2.9.0",
+		"simple-git": "^3.16.0",
 		"svelte": "^3.55.0",
 		"svelte-check": "^3.0.1",
 		"svelte-inview": "^3.0.1",
