--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
 		"@types/lodash": "^4.14.191",
 		"@types/lodash-es": "^4.17.6",
 		"@types/marked": "^4.0.8",
+		"@types/three": "^0.149.0",
 		"@wagmi/core": "^0.8.5",
+		"3d-force-graph": "^1.71.1",
 		"autoprefixer": "^10.4.13",
 		"axios": "^1.2.5",
 		"d3": "^7.8.0",
@@ -46,6 +48,9 @@
 		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
 		"marked": "^4.2.5",
+		"ngraph.fromjson": "^3.1.0",
+		"ngraph.graph": "^20.0.1",
+		"ngraph.tojson": "^1.2.0",
 		"postcss": "^8.4.20",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.1",
@@ -59,6 +64,7 @@
 		"svelte-typewriter": "^3.1.4",
 		"tailwindcss": "^3.2.4",
 		"tailwindcss-scoped-groups": "^2.0.0",
+		"three": "^0.149.0",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.3",
