--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"autoprefixer": "^10.4.13",
 		"axios": "^1.2.5",
 		"d3": "^7.8.0",
+		"d3-force-3d": "^3.0.5",
 		"d3-force-boundary": "^0.0.3",
 		"d3-sankey": "^0.12.3",
 		"d3-scale": "^4.0.2",
