--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@types/lodash": "^4.14.191",
 		"@types/lodash-es": "^4.17.6",
 		"@types/marked": "^4.0.8",
+		"@types/string-similarity": "^4.0.0",
 		"@types/three": "^0.149.0",
 		"@wagmi/core": "^0.8.19",
 		"3d-force-graph": "^1.71.1",
@@ -57,6 +58,7 @@
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"simple-git": "^3.16.1",
+		"string-similarity": "^4.0.4",
 		"svelte": "^3.55.1",
 		"svelte-check": "^3.0.3",
 		"svelte-inview": "^3.0.2",
