--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"marked": "^4.2.12",
 		"ngraph.fromjson": "^3.1.0",
 		"ngraph.graph": "^20.0.1",
+		"ngraph.path": "^1.4.0",
 		"ngraph.tojson": "^1.2.0",
 		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
