--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"ethers": "^5.7.2",
 		"glob": "^8.1.0",
 		"layercake": "^7.2.2",
+		"lightweight-charts": "^4.0.0",
 		"lodash": "^4.17.21",
 		"lodash-es": "^4.17.21",
 		"marked": "^4.2.12",
