--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"svelte-preprocess": "^5.0.1",
 		"svelte-seo": "^1.5.3",
 		"svelte-typewriter": "^3.1.4",
+		"tailwind-merge": "^1.10.0",
 		"tailwindcss": "^3.2.7",
 		"tailwindcss-scoped-groups": "^2.0.0",
 		"three": "^0.150.1",
