--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@0xsequence/multicall": "^0.43.33",
+		"@octokit/graphql": "^5.0.6",
 		"@octokit/rest": "^19.0.11",
 		"@playwright/test": "^1.35.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
